--- a/Fake Store/Fake Store.csproj
+++ b/Fake Store/Fake Store.csproj
@@ -15,6 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.1" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.1"/>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.1" />
   </ItemGroup>
 
