--- a/Fake Store/appsettings.json
+++ b/Fake Store/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    "FakeStoreconeccaoDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FakeStoreDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
