--- a/Fake Store/Fake Store.csproj
+++ b/Fake Store/Fake Store.csproj
@@ -16,8 +16,9 @@
 
   <ItemGroup>
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.1" />
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.1"/>
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.1" />
+    <PackageReference Include="ReflectionIT.Mvc.Paging" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
