--- a/Fake Store/Fake Store.csproj
+++ b/Fake Store/Fake Store.csproj
@@ -25,6 +25,7 @@
     <ProjectReference Include="..\Fake Store Aplication\Fake Store Aplication.csproj" />
     <ProjectReference Include="..\Fake Store Data\Fake Store Data.csproj" />
     <ProjectReference Include="..\Fake Store Domain\Fake Store Domain.csproj" />
+    <ProjectReference Include="..\Fake Store IOC\Fake Store IOC.csproj" />
   </ItemGroup>
 
   <ItemGroup>
