atualização do carrinho(deixei bem mais simples)

--- a/Fake Store Domain/Fake Store Domain.csproj
+++ b/Fake Store Domain/Fake Store Domain.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Models\CarrinhoCompraItem.cs" />
+    <Compile Remove="Models\Pedido.cs" />
+    <Compile Remove="Models\PedidoDetalhe.cs" />
+  </ItemGroup>
+
 </Project>
