--- a/Fake Store/appsettings.json
+++ b/Fake Store/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "FakeStoreconeccaoDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FakeStoreDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    //"FakeStoreconeccaoDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FakeStoreDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "FakeStoreconeccaoDB": "Data Source=DESKTOP-4DLCI4F\\SQLEXPRESS;Initial Catalog=FakeStoreDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
 
 
